--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
 .nav-items a {
     @apply px-4 py-2
 }
+
+.input-field {
+    @apply bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 text-white px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 text-white px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 text-white px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white
+}
