image name change

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
 .input-field {
     @apply bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 text-white px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 text-white px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white bg-white bg-opacity-20 focus:bg-white focus:placeholder:text-black font-semibold focus:text-blue-700 text-white px-4 py-2 text-lg rounded-md border-2 border-white placeholder:text-white active:bg-white
 }
+
+.google-signin-button{
+    @apply mt-2 border-2 rounded-lg w-full text-center py-2 px-4 flex justify-center items-center hover:bg-sky-300 hover:bg-opacity-25 active:bg-opacity-50
+}
